# MangeoMic

./: .gitignore  Cargo.toml  settings.gradle.kts
android/: local.properties
android/app/: build.gradle.kts
android/app/debug/: output-metadata.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mangeo/mic/ui/theme/: Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
app/src/androidTest/java/com/mangeo/mic/: ExampleInstrumentedTest.kt
app/src/main/java/com/mangeo/mic/: MainActivity.kt  MicService.kt
app/src/main/java/com/mangeo/mic/ui/theme/: Color.kt
app/src/test/java/com/mangeo/mic/: ExampleUnitTest.kt
assets/: mangeomic.desktop
debian/: manmic.deb
debian/manmic/DEBIAN/: control
debian/manmic/usr/share/applications/: manmic.desktop
rust/src/: audio.rs  main.rs  network.rs  state.rs
src/: audio.rs  network.rs
